--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,3 @@
-Header
-    use modernizr to add lt ie9 custom styles (low res icon pack/sprite)
-    check blog html5 shiv/shim
-    refactor existing css
-    
-main-content
-
-Add js/vendor to .gitignore when pushing to production
-Add hyperlinks to Telerik Academy, Sofia University
-Revise anchor styling - more font-weight, hover animations, :focus, :active
+remove Verdana fallback-font when pushing to master
+    find a suitable modern sans-serif font
+        final fallback: sans-serif
